--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "nyc": {
+    "exclude": [
+      "other"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cover": "nyc --reporter=lcov --reporter=text --reporter=html npm run test",
+    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "test": "ava 'app/**/*.test.js' --verbose --require ./other/setup-ava-tests.js",
+    "watch:test": "nodemon --quiet --watch app --exec npm run test -s",
+    "watch:cover": "nodemon --quiet --watch app --exec npm run cover -s"
   },
   "repository": {
     "type": "git",
@@ -17,5 +26,24 @@
   "bugs": {
     "url": "https://github.com/kentcdodds/react-ava-workshop/issues"
   },
-  "homepage": "https://github.com/kentcdodds/react-ava-workshop#readme"
+  "homepage": "https://github.com/kentcdodds/react-ava-workshop#readme",
+  "devDependencies": {
+    "ava": "0.9.2",
+    "babel-core": "6.5.1",
+    "babel-polyfill": "6.5.0",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-2": "6.5.0",
+    "babel-register": "6.5.1",
+    "eslint": "1.10.3",
+    "eslint-config-kentcdodds": "5.1.0",
+    "eslint-plugin-react": "3.16.1",
+    "jsdom": "8.0.2",
+    "nodemon": "1.8.1",
+    "nyc": "5.6.0",
+    "react": "0.14.7",
+    "react-addons-test-utils": "0.14.7",
+    "react-dom": "0.14.7",
+    "sinon": "1.17.3"
+  }
 }
