--- a/package.json
+++ b/package.json
@@ -2,18 +2,31 @@
   "name": "react-ava-workshop",
   "private": true,
   "version": "1.0.0",
-  "description": "",
+  "description": "🐯 A workshop repository for testing React ⚛ with AVA 🚀",
   "main": "index.js",
   "nyc": {
     "exclude": [
-      "other"
+      "other",
+      "**/*.test.js"
+    ],
+    "reporter": [
+      "lcov",
+      "text",
+      "html"
+    ]
+  },
+  "ava": {
+    "babel": "inherit",
+    "require": [
+      "./test/setup-ava-tests.js"
     ]
   },
   "scripts": {
-    "cover": "nyc --reporter=lcov --reporter=text --reporter=html npm run test",
+    "cover": "nyc npm run test",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "test": "ava 'app/**/*.test.js' --verbose --require ./other/setup-ava-tests.js",
-    "watch:test": "nodemon --quiet --watch app --exec npm run test -s",
+    "lint": "eslint .",
+    "test": "ava \"app/**/*.test.js\" --verbose",
+    "watch:test": "npm run test -- --watch",
     "watch:cover": "nodemon --quiet --watch app --exec npm run cover -s"
   },
   "repository": {
@@ -28,22 +41,23 @@
   },
   "homepage": "https://github.com/kentcdodds/react-ava-workshop#readme",
   "devDependencies": {
-    "ava": "0.9.2",
-    "babel-core": "6.7.2",
-    "babel-polyfill": "6.7.2",
+    "ava": "0.13.0",
+    "babel-core": "6.7.4",
+    "babel-eslint": "6.0.2",
+    "babel-polyfill": "6.7.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
     "babel-register": "6.7.2",
-    "eslint": "2.4.0",
-    "eslint-config-kentcdodds": "6.0.0",
+    "eslint": "2.6.0",
+    "eslint-config-kentcdodds": "6.1.1",
     "eslint-plugin-react": "4.2.3",
-    "jsdom": "8.1.0",
+    "jsdom": "8.3.0",
     "nodemon": "1.9.1",
     "nyc": "6.1.1",
-    "react": "0.14.7",
-    "react-addons-test-utils": "0.14.7",
-    "react-dom": "0.14.7",
+    "react": "0.14.8",
+    "react-addons-test-utils": "0.14.8",
+    "react-dom": "0.14.8",
     "sinon": "1.17.3"
   }
 }
