--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-ava-workshop",
   "private": true,
   "version": "1.0.0",
-  "description": "",
+  "description": "🐯 A workshop repository for testing React ⚛ with AVA 🚀",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,16 @@
   },
   "homepage": "https://github.com/kentcdodds/react-ava-workshop#readme",
   "devDependencies": {
-    "babel-core": "6.5.1",
-    "babel-polyfill": "6.5.0",
-    "babel-preset-es2015": "6.5.0",
+    "babel-core": "6.7.4",
+    "babel-eslint": "6.0.2",
+    "babel-polyfill": "6.7.4",
+    "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
-    "eslint": "1.10.3",
-    "eslint-config-kentcdodds": "5.1.0",
-    "eslint-plugin-react": "3.16.1",
-    "react": "0.14.7",
-    "react-dom": "0.14.7"
+    "eslint": "2.6.0",
+    "eslint-config-kentcdodds": "6.1.1",
+    "eslint-plugin-react": "4.2.3",
+    "react": "0.14.8",
+    "react-dom": "0.14.8"
   }
 }
