--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint .",
     "test": "ava \"app/**/*.test.js\" --verbose",
     "watch:test": "npm run test -- --watch",
-    "watch:cover": "nodemon --quiet --watch app --exec npm run cover -s"
+    "watch:cover": "nodemon --quiet --delay 0 --watch app --exec npm run cover -s"
   },
   "repository": {
     "type": "git",
